--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -1,10 +1,7 @@
-.movieDes {
-   overflow-y: auto;
-   height: 150px;
-}
 
 .miniInfo {
    width: 100%;
+   height: 100%;
    border-radius: 5px;
    /* transform: scale(1); */
    transition: background-color 0.3s ease-in, transform 0.2s ease-out;
@@ -15,5 +12,5 @@
    color: white;
    background-color: #0d253f;
    cursor: pointer;
-   transform: scale(1.1);
+   /* transform: scale(1.1); */
 }
