--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -2,12 +2,12 @@
     font-weight: bolder;
     display: flex;
     justify-content: space-between; 
+    position: relative;
 }
 
 input {
     margin: 10px;
     width: 500px;
-   
     border: none;
     border-radius: 50px;
     padding-left: 20px;
@@ -27,3 +27,36 @@ button:hover {
     color: white;
 }
 
+ul {
+    list-style: none;
+}
+
+li:hover {
+    cursor: pointer;
+    background-color: whitesmoke;
+}
+
+
+.autocomplete{
+    width: 470px;
+    background-color: white;
+    position: absolute;
+    top: 70px; /* Adjust these values to position the div as desired */
+    left: 40px;
+    z-index: 10; /* Make sure this is higher than other elements in the stacking context */
+    border: 2px solid #0d253f;
+    border-radius: 0 0 50px 50px;
+}
+
+.suggestions {
+    display: flex;
+    margin-left: 10px;
+    padding: 20px;
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: auto;
+}
